Corrected NoiseChisel options, added --meshbasedcheck
The fast writing of the NoiseChisel options was very buggy, so I went
through it again and made corrections.

While doing the corrections, I noticed an improvement: I could create
a function to write the mesh values to a FITS file instead of
separately writing checks everytime I wanted to do so. This idea
actually came to my mind when I wanted to add the --meshbasedcheck
option. With this functionality added, several checks would have to be
done multiple times in the course of one function which would make
things very hard to read for an outside reader. They were all also
repetative and could have caused bugs! These parts of the functions
are now much more cleaner and elegant than before.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2015-06-12  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/subtractsky/args.h (options): Removed the
+	--checkinterpolation option.
+
+	* src/subtractsky/subtractsky.c (subtractsky): Similar to below.
+
+	* src/noisechisel/thresh.c (findapplyqthreshold): Similar to
+	below.
+
+	* src/noisechisel/sky.c (findavestdongrid): Similar to below.
+
+	* src/noisechisel/detection.c (findsnthreshongrid): Now using
+	meshvaluefile from mesh.h instead of checking its self. Once the
+	--meshbasedcheck was added, doing all the checks in each function
+	was too long and repetative. So I just made this function to do
+	the job with one call and not distract the readers.
+
 2015-06-11  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/noisechisel/args.h (options): `minbfrac' and `minnumfalse'
